[XUI-271] Prevent XUIProgressCircular from stretching vertically (#4194)

--- a/src/sass/7-components/_progressindicator.scss
+++ b/src/sass/7-components/_progressindicator.scss
@@ -488,8 +488,15 @@ $xui-progress-linear-min-height: $xui-s-2xsmall;
 }
 
 .#{$ns}-progress-circular {
+  display: flex;
+  flex-direction: column;
   height: auto;
+  justify-content: center;
   width: $xui-progress-circular-min-width;
+}
+
+.#{$ns}-progress--fragment {
+  position: relative;
 }
 
 .#{$ns}-progress-circular.#{$ns}-progress-grow {
